--- a/docs/_includes/page__hero.html
+++ b/docs/_includes/page__hero.html
@@ -19,28 +19,30 @@
 {% assign image_description = image_description | markdownify | strip_html | strip_newlines | escape_once %}
 
 <div class="page__hero{% if page.header.overlay_color or page.header.overlay_image %}--overlay{% endif %}"
-     style="{% if page.header.overlay_color %}background-color: {{ page.header.overlay_color | default: 'transparent' }};{% endif %} {% if overlay_img_path %}background-image: {% if overlay_filter %}{{ overlay_filter }}, {% endif %}url('{{ overlay_img_path }}');{% endif %}; height: 100vh; background-size: cover; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+     style="background: linear-gradient(to right, #1976d2, #d5eaf6); height: 80vh; background-size: cover; display: flex; flex-direction: column; justify-content: center; align-items: center;">
   {% if page.header.overlay_color or page.header.overlay_image %}
-    <div class="wrapper">
-      <h1 id="page-title" class="page__title" itemprop="headline">
-          {{ page.title | default: site.title | markdownify | remove: "<p>" | remove: "</p>" }}
-      </h1>
-      {% if page.header.show_overlay_excerpt != false and page.excerpt %}
-        <p class="page__lead">{{ page.excerpt | markdownify | remove: "<p>" | remove: "</p>" }}</p>
-      {% endif %}
-      {% if page.header.actions %}
-      <div style="text-align: center">
-        <p>
+  <div class="wrapper">
+    <img src="/assets/images/PDFminion-logo.png" alt="PDFminion logo" class="center-img">
+    <h1 id="page-title" class="page__title top-margin black" itemprop="headline">
+      {{ page.title | default: site.title | markdownify | remove: "<p>" | remove: "</p>" }}
+    </h1>
+    {% if page.header.show_overlay_excerpt != false and page.excerpt %}
+    <p class="page__lead black">{{ page.excerpt | markdownify | remove: "<p>" | remove: "</p>" }}</p>
+    {% endif %}
+    {% if page.header.actions %}
+    <div style="text-align: center">
+      <p>
         {% for action in page.header.actions %}
-          <a href="{{ action.url | relative_url }}" class="btn btn--light-outline btn--large" {% if action.blank %} target="_blank" rel="noopener noreferrer nofollow"{% endif %}>{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
+        <a href="{{ action.url | relative_url }}" class="btn btn--primary btn--large" {% if action.blank %} target="_blank" rel="noopener noreferrer nofollow"{% endif %}>{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
         {% endfor %}
-      </div>
-      {% endif %}
     </div>
+    {% endif %}
+  </div>
   {% else %}
-    <img src="{{ page.header.image | relative_url }}" alt="{{ image_description }}" class="page__hero-image">
+  <img src="{{ page.header.image | relative_url }}" alt="{{ image_description }}" class="page__hero-image">
   {% endif %}
   {% if page.header.caption %}
-    <span class="page__hero-caption">{{ page.header.caption | markdownify | remove: "<p>" | remove: "</p>" }}</span>
+  <span class="page__hero-caption">{{ page.header.caption | markdownify | remove: "<p>" | remove: "</p>" }}</span>
   {% endif %}
 </div>
+
