--- a/docs/assets/css/custom-styles.css
+++ b/docs/assets/css/custom-styles.css
@@ -1,1 +1,15 @@
-/* Custom stylesheet, add your own styles here */
+.top-margin {
+    margin-top: 2rem !important;
+}
+
+.black {
+    color: black !important;
+}
+
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 6rem;
+    width: 150px;
+}
