--- a/docs/_sass/oneflow/skins/_aqua.scss
+++ b/docs/_sass/oneflow/skins/_aqua.scss
@@ -10,7 +10,7 @@ $light-gray                 : mix(#fff, $gray, 50%) !default;
 $lighter-gray               : mix(#fff, $gray, 80%) !default;
 
 $body-color                 : #fff !default;
-$background-color           : #bbdefb !default;
+$background-color           : #d0f0fb !default;
 $code-background-color      : $lighter-gray !default;
 $code-background-color-dark : $light-gray !default;
 $text-color                 : $dark-gray !default;
