--- a/docs/_includes/head/custom.html
+++ b/docs/_includes/head/custom.html
@@ -1,5 +1,7 @@
 <!-- start custom head snippets -->
 
+<script defer data-domain="pdfminion.arc42.org" src="https://plausible.io/js/script.file-downloads.js"></script>
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
