left-aligned-section class, credits as id for working nav-link
close #29

--- a/docs/assets/css/custom-styles.css
+++ b/docs/assets/css/custom-styles.css
@@ -24,11 +24,11 @@
     margin-top: 0.7rem;
 }
 
-#examples {
+.left-aligned-section {
     text-align: left;
 }
 
-#examples h1 {
+.left-aligned-section h1 {
     text-align: center; 
 }
 
