add supported by innoq to footer
close #28

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,5 +1,7 @@
 <div class="page__footer-follow">
 
+  <a href="https://www.innoq.com" target="_blank" rel="noopener noreferrer nofollow"><img class="supported-by-innoq" alt="Supported by INNOQ" src="/assets/images/supported-by-innoq--petrol-apricot.svg"></a><br>
+
   <ul class="socials">
 
     <li></li>
